# MusicPlayer

./: CMakeLists.txt  keyboard.h  main.cpp  math.cpp  math.h
src/: list.json
